<resources>
    <string name="app_name">Grocery Store</string>
    <string name="website">github.com/toprek95</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="cart">Cart</string>
    <string name="categories">Categories</string>
    <string name="about_us">About us</string>
    <string name="terms">Terms</string>
    <string name="licences">Licences</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="price">Price</string>
    <string name="grocery_item_name">Grocery item name</string>
    <string name="new_items_label">New Items</string>
    <string name="popular_items_label">Popular Items</string>
    <string name="suggested_items_label">Suggested Items</string>
    <string name="grocery_item_name_placeholder">Grocery Item</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="add_new_review">(add new review)</string>
    <string name="reviews">Reviews:</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt sem imperdiet auctor aliquet. Morbi convallis felis et molestie convallis. Duis sed lobortis nisl. Aenean cursus ut mi eget posuere. Duis auctor neque nec felis pretium porta. Mauris aliquam ut massa nec pharetra. In pellentesque dui velit, vitae hendrerit orci consequat non. Donec lacinia placerat lacus, et cursus odio suscipit vitae. Curabitur tempor tortor sit amet nunc rhoncus condimentum. Nunc euismod erat sit amet diam lacinia lobortis. Vestibulum facilisis eros ac mattis imperdiet. Aenean porttitor, elit quis ullamcorper mollis, odio dolor hendrerit enim, pretium iaculis ex metus sit amet quam. Sed lectus risus, semper quis efficitur nec, hendrerit a enim. Fusce mollis est sit amet eleifend commodo.</string>
    <string name="user_name">User name</string>
    <string name="date_placeholder">23-Mar-2020</string>
    <string name="name_hint">Name</string>
    <string name="you_are_reviewing_text">You are reviewing:</string>
    <string name="your_review">Your review</string>
    <string name="add_review">Add review</string>
    <string name="cancel">Cancel</string>
    <string name="see_all_categories">See All Categories</string>
    <string name="category_placeholder">Category</string>
    <string name="search_logo">search_logo</string>
    <string name="confirm">Confirm</string>
    <string name="select_categories_for_search">Select categories for search:</string>
    <string name="search_activity_name">search_activity</string>
    <string name="main_activity_name">main_activity</string>
    <string name="all_categories_dialog_tag">all_categories_dialog</string>
    <string name="your_cart_is_empty">Your cart is empty!</string>
    <string name="cart_items">Cart items:</string>
    <string name="price_example">15 USD</string>
    <string name="total_price">Total price:</string>
    <string name="next">Next</string>
    <string name="amount_label">Amount:</string>
    <string name="amount_example">8</string>
    <string name="price_label">Price:</string>
    <string name="grocery_item_image_desc">Grocery item image</string>
    <string name="delete_icon_desc">Delete icon</string>
    <string name="add_to_cart_dialog_label">Add to cart:</string>
    <string name="number_of_items_hint">Number of items</string>
    <string name="street_address">Street address</string>
    <string name="full_name">Full name</string>
    <string name="city">City</string>
    <string name="zip_code">ZIP code</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="back">Back</string>
    <string name="error_full_name">Please enter full name</string>
    <string name="error_phone_number">Please enter phone number</string>
    <string name="error_email">Please enter your Email address</string>
    <string name="error_street_address">Please enter address</string>
    <string name="error_city">Please enter city</string>
    <string name="error_zip_code">Please enter ZIP</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="error_first_name">Please enter first name</string>
    <string name="error_last_name">Please enter last name</string>
    <string name="full_name_order">Full name:</string>
    <string name="full_name_placeholder">Peter Parker</string>
    <string name="total_price_order">Total price:</string>
    <string name="address_order">Address:</string>
    <string name="address_placeholder">221b Baker Street, London</string>
    <string name="phone_number_order">Phone number:</string>
    <string name="phone_number_placeholder">+12 345 67 89</string>
    <string name="payment_method">Select a payment method:</string>
    <string name="creditcard">CreditCard</string>
    <string name="paypal">PayPal</string>
    <string name="items_order">Items:</string>
    <string name="items_placeholder">Pepsi, Coca Cola, Ice Cream</string>
    <string name="checkout_button">Checkout</string>
    <string name="unknown_payment">Unknown</string>
    <string name="start_shopping">Start shopping</string>
    <string name="payment_successful">Payment successful</string>
    <string name="payment_failed">Payment failed. Please try again</string>
    <string name="app_description">This application is designed and developed by Aleksandar Toprek, with a little help from Android tutorials, stackoverflow.com, and randomized Google searches.</string>
    <string name="dismiss">Dismiss</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="terms_description">This application is released without any Terms and Conditions. \nEnjoy using this application.</string>
    <string name="google_url">https://www.google.com/</string>
    <string name="description_label">Description:</string>
</resources>