<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/items_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/items_order"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/items_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/items_placeholder"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/price_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/items_wrapper"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_price_order"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/total_price_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/price_example"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/full_name_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/price_wrapper"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name_order"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/full_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/full_name_placeholder"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/address_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/full_name_wrapper"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address_order"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/address_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/address_placeholder"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/phone_number_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/address_wrapper"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number_order"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/phone_number_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/phone_number_placeholder"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/payment_method_wrapper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_number_wrapper"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/payment_method"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/payment_method_wrapper"
                android:layout_marginTop="10dp">

                <RadioGroup
                    android:id="@+id/payment_method_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/credit_card_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="@string/creditcard"
                        app:buttonTint="@color/colorPrimary" />

                    <RadioButton
                        android:id="@+id/paypal_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/paypal"
                        app:buttonTint="@color/colorPrimary" />
                </RadioGroup>

            </RelativeLayout>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/buttons_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="center"
                android:text="@string/back"
                android:textColor="@color/red"
                android:textSize="16sp" />

            <Button
                android:id="@+id/checkout_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="50"
                android:text="@string/checkout_button"
                android:textAllCaps="false"
                android:textSize="16sp" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>