<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cart_item_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:padding="5dp"
    app:cardCornerRadius="3dp"
    app:elevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/cart_item_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/grocery_item_image_desc"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/cart_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/amount_label"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:layout_toStartOf="@id/cart_item_delete"
            android:layout_toEndOf="@id/cart_item_image"
            android:text="@string/cart_items"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/amount_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/cart_item_image"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/cart_item_image"
            android:text="@string/amount_label"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/amount_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/cart_item_image"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/amount_label"
            android:text="@string/amount_example"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/cart_item_image"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/amount_text_view"
            android:text="@string/price_label"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/cart_item_image"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/price_label"
            android:text="@string/price_example"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/cart_item_delete"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/delete_icon_desc"
            android:src="@drawable/ic_delete"
            android:tint="@color/red" />
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>