<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="30dp">

    <RelativeLayout
        android:id="@+id/label_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/item_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_are_reviewing_text"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/add_new_review_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/item_label"
            android:text="@string/grocery_item_name"
            android:textSize="16sp"
            android:textStyle="italic" />
    </RelativeLayout>

    <EditText
        android:id="@+id/add_new_review_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/name_hint"
        android:inputType="text|textCapSentences"
        android:lines="1"
        android:maxLines="1" />

    <me.zhanghai.android.materialratingbar.MaterialRatingBar
        android:id="@+id/add_new_review_rating"
        style="@style/Widget.MaterialRatingBar.RatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:numStars="5"
        android:stepSize="0.5"
        app:mrb_fillBackgroundStars="true"
        app:mrb_progressTint="@color/colorPrimary" />

    <EditText
        android:id="@+id/add_new_review_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:hint="@string/your_review"
        android:inputType="textCapSentences|textMultiLine"
        android:lines="5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/add_new_review_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/red"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_new_review_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/add_review"
            android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>