<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/cart_items_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_items"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/container"
            android:layout_below="@id/label"
            android:layout_marginTop="10dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cart_items_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </androidx.core.widget.NestedScrollView>


        <RelativeLayout
            android:id="@+id/container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:id="@+id/total_price_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_price"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/total_price_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="10dp"
                    android:text="@string/price_example"
                    android:textSize="20sp" />
            </LinearLayout>

            <Button
                android:id="@+id/cart_items_next_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/total_price_container"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textSize="16sp" />

        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/empty_cart_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/your_cart_is_empty"
        android:textSize="22sp"
        android:visibility="gone" />
</RelativeLayout>