<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/review_author_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <me.zhanghai.android.materialratingbar.MaterialRatingBar
            android:id="@+id/review_rating"
            style="@style/Widget.MaterialRatingBar.RatingBar.Indicator.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/review_author_name"
            android:layout_marginTop="2dp"
            android:numStars="5"
            android:stepSize="0.1"
            app:mrb_fillBackgroundStars="true"
            app:mrb_progressTint="@color/colorPrimary" />

    </RelativeLayout>

    <TextView
        android:id="@+id/review_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/container"
        android:text="@string/lorem_ipsum" />

    <TextView
        android:id="@+id/review_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/review_text"
        android:layout_alignParentEnd="true"
        android:text="@string/date_placeholder"
        android:textStyle="italic" />
</RelativeLayout>